--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0px;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 }
 .gototopbtn
 {
@@ -21,6 +22,7 @@ body {
   left: 50%;
   height: 30px;
   width: 30px;
+  z-index: 100;
 }
 
 .navigation-container {
@@ -64,21 +66,25 @@ body {
   flex-direction: column;
   height: 800px; 
   width: 50%;
-  margin: 50px;
+  margin-right: 50px;
 }
 
 .container3
 {
+  border: solid 3px;
   display: flex;
-  height: 400px; 
-  margin: 20px;
+  height: 400px;
+  margin-bottom: 43px;
+  background-color: lightgreen;
 }
 
 .container4
 {
+  border: solid 3px;
   display: flex;
   height: 800px;
   width: 50%; 
+  background-color: lightgreen;
 }
 
 .item {
@@ -89,14 +95,28 @@ body {
 .imgitem{
   width: 360px;
   height: 375px;
-  padding: 10px;
+}
+
+.item-r{
+  padding-right: 30px;
+}
+
+.item-l{
+  padding-left: 30px;
+}
+
+.img-r{
+  padding-right: 10px;
+}
+
+.img-l{
+  padding-left: 10px;
 }
 
 .imgitem2{
-  width: 360px;
-  height: 795px;
-  padding: 10px;
-  margin: 10px;
+  width: 50%;
+  height: 100%;
+  padding-right: 10px;
 }
 
 
