--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,7 +1,10 @@
 body {
   margin: 0px;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 
+ion-icon {
+  font-size: 32px;
 }
 .gototopbtn
 {
@@ -51,13 +54,13 @@ body {
 }
 
 
-
 .container
 {
   display: flex;
   height: 800px;
   width: 80%;
   margin: auto;
+  margin-top: 80px;
 }
 
 .container2
@@ -71,20 +74,20 @@ body {
 
 .container3
 {
-  border: solid 3px;
+  border: solid 4px;
   display: flex;
   height: 400px;
   margin-bottom: 43px;
-  background-color: lightgreen;
+  background-color: rgb(218, 72, 72);
 }
 
 .container4
 {
-  border: solid 3px;
+  border: solid 4px;
   display: flex;
   height: 800px;
   width: 50%; 
-  background-color: lightgreen;
+  background-color: rgb(218, 72, 72);
 }
 
 .item {
@@ -97,26 +100,58 @@ body {
   height: 375px;
 }
 
-.item-r{
-  padding-right: 30px;
+.p-r{
+  padding-left: 20px;
 }
 
-.item-l{
-  padding-left: 30px;
+.p-l{
+  padding-right: 20px;
 }
 
-.img-r{
-  padding-right: 10px;
-}
-
-.img-l{
-  padding-left: 10px;
+.itemtext{
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .imgitem2{
   width: 50%;
   height: 100%;
   padding-right: 10px;
+}
+
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: rgb(218, 72, 72);
+  color: white;
+  margin-top: 100px;
+}
+
+.footerlogo
+{
+  height: 100px;
+  width: 100px;
+  margin: auto;
+}
+
+.footer-container {
+  display: flex;
+  /* max-width: 80%; */
+  padding: 0 20px; 
+  justify-content: center;
+}
+
+.footer-item {
+  color: white;
+  padding: 10px 20px;
+  font-weight: bold;
+  text-decoration: none;
+  
+}
+
+.footer-item:hover{
+  background-color: gray;
+  border-radius: 20px;
 }
 
 
