--- a/Styles/style.css
+++ b/Styles/style.css
@@ -6,6 +6,11 @@ body {
 ion-icon {
   font-size: 32px;
 }
+
+hr {
+  width: 25%;
+  margin: 10px auto;
+}
 .gototopbtn
 {
   color: rgb(255, 0, 0);
@@ -35,6 +40,7 @@ ion-icon {
   padding: 0 20px;
   height: 200px;
   background-position-y: 52%;
+  border-bottom: solid black 5px;
 }
 
 .navigation-item {
@@ -45,12 +51,12 @@ ion-icon {
   margin-top: auto;
   font-size: 20px;
   text-shadow: 1px 2px #000;
+  transition: background-color 1s;
 }
 
 .navigation-item:hover
 {
   background-color: rgb(212, 46, 55);
-  animation: fadeIn 0.5s;
 }
 
 
@@ -61,6 +67,7 @@ ion-icon {
   width: 80%;
   margin: auto;
   margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .container2
@@ -88,6 +95,28 @@ ion-icon {
   height: 800px;
   width: 50%; 
   background-color: rgb(218, 72, 72);
+}
+
+.container5 {
+  display: flex;
+  height: 800px;
+  width: 80%;
+  margin: auto;
+  margin-top: 80px;
+  flex-wrap: wrap;
+}
+
+.container6 {
+  display: flex;
+  width: 15%;
+  margin: 20px 40px;
+  flex-wrap: wrap;
+  background-color: rgb(218, 72, 72);
+  transition: width 2s;
+}
+
+.container6:hover {
+  width: 50%;
 }
 
 .item {
@@ -146,24 +175,31 @@ footer {
   padding: 10px 20px;
   font-weight: bold;
   text-decoration: none;
-  
+  border-radius: 20px;
+  transition: background-color 1s;
 }
 
 .footer-item:hover{
   background-color: gray;
-  border-radius: 20px;
 }
 
+.text {
+  text-align: center;
+}
 
-@keyframes fadeIn
+.text p {
+  font-size: 30px;
+}
+
+.text p span
 {
-  from
-  {
-    opacity: 0;
-  }
+  font-size: 20px;
+}
 
-  to 
-  {
-    opacity: 1;
-  }
+.text h1 {
+  font-size: 40px;
+}
+
+iframe {
+  border: solid black 5px;
 }
