--- a/Styles/style.css
+++ b/Styles/style.css
@@ -13,12 +13,10 @@ hr {
   border-color: black;
 }
 
-<<<<<<< HEAD
 .center {
   text-align: center;
 }
 
-=======
 .tab {
 	tab-size:30; 
 	white-space: pre;
@@ -44,8 +42,23 @@ hr {
 .numbercontainer div {
   margin: 20px;
 }
+label {
+  display: inline-block;
+  margin-bottom: 5px;
+}
 
->>>>>>> 3b986f833975fa245010fc156b142d2a22c2cd40
+.formcontainer {
+  display: flex;
+  justify-content: center;
+  height: 800px;
+  width: 600px;
+}
+.inputcontainer {
+  display: flex;
+}
+.inputcontainer div {
+  margin: 20px;
+}
 .gototopbtn
 {
   color: rgb(255, 0, 0);
@@ -196,7 +209,7 @@ hr {
 .leitbildtxt {
   border: solid black 2px;
   height: 300px;
-  background-color: rgba(252, 54, 169, 0.555);
+  background-color: rgba(235, 54, 252, 0.555);
   margin: 50px 15%;
   font-size: 26px;
 }
