--- a/Styles/style.css
+++ b/Styles/style.css
@@ -18,9 +18,54 @@ hr {
   text-align: center;
 }
 
-.tab {
-	tab-size:30; 
-	white-space: pre;
+.teamcontainer {
+  display: flex;
+  margin: 50px 21%;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: lightgrey;
+}
+
+.teamitem {
+  width: 300px;
+  background-color: rgb(218, 72, 72);
+  padding-bottom: 20px;
+  margin: 30px 100px;
+}
+.teamitem div{
+  text-align: center;
+}
+
+.teamitem div h1{
+  font-size: 33px;
+  margin: 2px;
+}
+
+.smartcontainer {
+  display: flex;
+  background-color: rgb(212, 46, 55);
+  height: 400px;
+  justify-content: center;
+  margin: 0 20%;
+  border: solid black 2px;
+}
+.smartcontainer div {
+  text-align: left;
+  width: 50%;
+  border: solid black 1px;
+  padding: 0 35px;
+}
+.smartcontainer div div {
+  margin: 0;
+  text-align: center;
+  padding: 0;
+  border: none;
+  background-color: grey;
+  width: 100%;
+}
+li {
+  font-size: 30px;
+  margin-bottom: 20px;
 }
 
 .number {
